project add form submit css bugs

--- a/src/template.html
+++ b/src/template.html
@@ -40,12 +40,7 @@
                         <div class="projectsTitle">Projects(2)</div>
                         <button class="createProject">+</button>
                     </div>
-                    <button class="buttonTask">
-                        <img class="screw" src="/icons/screwdriver-wrench-solid.svg">
-                        My Homework
-                        <img class="edit" src="/icons/edit.svg">
-                        <img class="delete" src="/icons/trash-solid.svg">
-                    </button>
+                    
                 </div>
             </div>
             <div class="content">
@@ -63,7 +58,7 @@
                 <button class="closeForm">X</button>
             </div>
             <div class="label">Title:</div>
-            <input type="text" id="title">
+            <input type="text" id="projectFormTitle">
             <div class="formButtons">
                 <button class="cancelForm">Cancel</button>
                 <button type="submit" class="submitForm">Add</button>
