dialog and form dinamically generated depending on mods + edit project functionality

--- a/src/template.html
+++ b/src/template.html
@@ -51,19 +51,19 @@
             </div>
         </div>
     </div>
-    <div class="dialog hide">
-        <form>
+    <!-- <div class="dialog hide">
+        <form >
             <div class="formHeader">
-                <div class="formTitle">Add Project</div>
+                <div class="projectFormTitle">Add Project</div>
                 <button class="closeForm">X</button>
             </div>
             <div class="label">Title:</div>
-            <input type="text" id="projectFormTitle">
+            <input type="text" id="projectInputTitle">
             <div class="formButtons">
                 <button class="cancelForm">Cancel</button>
-                <button type="submit" class="submitForm">Add</button>
+                <button type="submit" class="submitProjectForm">Add</button>
             </div>
         </form>
-    </div>
+    </div> -->
 </body>
 </html>
